finished initial swagger annotations
