# handlers/textures.go
@@ -23,12 +23,32 @@ import (
 )
 
 // swagger:response textureResponse
-type textureResponse struct {
+type textureResponseWrapper struct {
 	// Single texture with matching id
 	// in: body
 	Body data.Texture
 }
 
+// swagger:response texturesResponse
+type texturesResponseWrapper struct {
+	// All textures in the database
+	// in: body
+	Body []data.Texture
+}
+
+// swagger:response noContent
+type textureNoContent struct {
+}
+
+// swagger:parameters [getTexture, deleteTexture]
+type textureIdParameter struct {
+	// The id of the texture in the database
+	// in:path
+	// required: true
+	ID string `json:"id"`
+}
+
+// Textures is an http Handler
 type Textures struct {
 	logger *log.Logger
 }
@@ -37,10 +57,12 @@ func NewHandler(logger*log.Logger) *Textures {
 	return &Textures{logger}
 }
 
-// swagger:route GET /textures/{id} texture
-// Returns single texture based on provided id
+// swagger:route GET /textures/{id} getTexture
+// Returns single texture based on id
 // responses:
-//  200: textureResponse
+//  200: texturesResponse
+
+// GetTexture returns matched texture from the database
 func (t*Textures) GetTexture(rw http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
 
@@ -57,6 +79,12 @@ func (t*Textures) GetTexture(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// swagger:route GET /textures getTextures
+// Returns all available textures based on id
+// responses:
+//  200: textureResponse
+
+// GetTextures returns all textures available in the database
 func (t*Textures) GetTextures(rw http.ResponseWriter, r *http.Request) {
 	texturesList := data.GetTextures()
 
@@ -67,11 +95,25 @@ func (t*Textures) GetTextures(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// swagger:route POST /textures getTexture
+// Adds single texture to the database
+// responses:
+//  201: noContent
+
+// PostTexture adds provided texture to the database
 func (t*Textures) PostTexture(rw http.ResponseWriter, r *http.Request) {
 	texture := r.Context().Value(middleware.KeyTexture{}).(*data.Texture)
 	data.AddTexture(texture)
 }
 
+// swagger:route PUT /textures/{id} getTexture
+// Updates single texture based on id
+// responses:
+//  201: noContent
+//  404: noContent
+//  500: noContent
+
+// PutTexture adds provided texture to the database
 func (t*Textures) PutTexture(rw http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
 	texture := r.Context().Value(middleware.KeyTexture{}).(*data.Texture)
@@ -87,6 +129,14 @@ func (t*Textures) PutTexture(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// swagger:route DELETE /textures/{id} deleteTexture
+// Deletes a texture from the database 
+// responses:
+//  200: noContent
+//  404: noContent
+//  500: noContent
+
+// DeleteTexture deletes texture from the database
 func (t*Textures) DeleteTexture(rw http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
 
